@@ -10,6 +10,7 @@
     "require": {
         "php": "^8.2",
         "filament/filament": "^3.2",
+        "guzzlehttp/guzzle": "^7.9",
         "laravel/framework": "^11.9",
         "laravel/jetstream": "^5.1",
         "laravel/pulse": "^1.2",
